vcluster_versioned_docs/version-0.23.0/configure/vcluster-yaml/networking/README.mdx
---
title: Networking
sidebar_label: networking
sidebar_position: 3
description: Configure networking such as replicating and resolving services.
---

import Networking from '../../../_partials/config/networking.mdx'


## Ingress traffic

### Ingress to Service

The vCluster has the option to enable Ingress resources synchronization. That means that you can create an ingress in a vCluster to make a service in this vCluster available via a hostname/domain. However, instead of having to run a separate ingress controller in each vCluster, the ingress resource will be synchronized to the underlying cluster (when enabled) which means that the vCluster can use a shared ingress controller that is running in the host cluster. This helps to share resources across different vClusters and is easier for users of vClusters because otherwise, they would need to install an ingress controller and manually configure DNS for each vCluster.

## From inside a virtual cluster

### Pod in the virtual cluster to Pod in the same virtual cluster

Pods run inside the underlying host cluster. vCluster's syncer component syncs Pods between host and virtual cluster. These synced Pods have cluster-internal IP addresses and can communicate with each other via IP-based networking.

No additional configuration is required for Pod to Pod networking in the same virtual cluster.

### Pod in the virtual cluster to Service in the same virtual cluster

To allow pods to communicate with services, vCluster also synchronizes Service objects, while stripping away unnecessary information from the resource. However, instead of using the DNS names of the Services inside the host cluster, vCluster has its own DNS service which allows virtual cluster pods to use much more intuitive DNS mappings, just as in a regular cluster.

No additional configuration is required for Pod to Service networking in the same virtual cluster.

### Pod in the virtual cluster to Service in the host cluster

See [Host cluster to virtual cluster](./replicate-services).

### Pod in the virtual cluster to Service in a different virtual cluster

See [Mapping services across vCluster instances](./resolve-dns).

## From the host cluster

### Pod in the host cluster to Service in the virtual cluster

See [Virtual cluster to host cluster](./replicate-services)

## Config reference

<Networking />